Ribbon: Fix button overlap in top-right of editor

--- a/src/editor.less
+++ b/src/editor.less
@@ -1,12 +1,6 @@
-@editor-split-button-right-margin: 7px;
-
 .title-row {
     .icon-action {
         .icon-button();
-
-        &.bx-dock-right {
-            margin-right: @editor-split-button-right-margin;
-        }
     }
 }
 
